--- a/property/export-keystore.html
+++ b/property/export-keystore.html
@@ -45,7 +45,7 @@
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				purseIndex = self.purseIndex;
-				var purseInfo = store.get('dcarPurse');
+				var purseInfo = store.get('ethPurse');
 				keystore = purseInfo[purseIndex].keystore;
 				console.log(keystore);
 				$('#keystoreBox').val(keystore);
