--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -19,7 +19,7 @@
 		</header>
 		<div class="mui-content between">
 			<div class="mill_top">
-				<p class="first_line">总收益</p>
+				<p class="first_line">历史总收益</p>
 				<p class="second_line">
 					<span id="balance">0</span>
 					<span class="first_line">DCAR</span>
